add imgs and editor

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 <button class="actor" value="actor" onclick="onIncreaseFontSizeAndFilter(this)" >Actor</button>
                 <button class="cute" value="cute" onclick="onIncreaseFontSizeAndFilter(this)" >Cute</button>
             </div>
-            <button class="flexible-btn" onclick="onRandomMeme()">I'm flexible</button>
+            <button class="flexible-btn">I'm flexible</button>
+            <!-- <button class="flexible-btn" onclick="onRandomMeme()">I'm flexible</button> -->
             <button class="more-btn" onclick="onReplaceSiteToGithub()">More</button>
         </section>
 
@@ -112,13 +113,13 @@
         <div class="logo"></div>
     </footer>
 
-    <script src="js/services/meme.service.js"></script>
-    <script src="js/services/galley.service.js"></script>
+    <!-- <script src="js/services/meme.service.js"></script> -->
+    <!-- <script src="js/services/galley.service.js"></script> -->
     <script src="js/services/storage.service.js"></script>
     <script src="js/services/utils.js"></script>
     <script src="js/controllers/main.controller.js"></script>
     <script src="js/services/upload.service.js"></script>
-    <script src="js/controllers/gallery.controller.js"></script>
+    <!-- <script src="js/controllers/gallery.controller.js"></script> -->
     <script src="js/controllers/meme.controller.js"></script>
 
 </body>
