--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul class="main-nav clean-list flex">
                 <li onclick="onGalleryShow()">Gallery</li>
-                <li class="saved-meme-page" >Memes</li>
+                <li class="saved-meme-page" onclick="onMemeShow()" >Memes</li>
                 <li onclick="onReplaceSiteToLinkedin()">About</li>
             </ul>
         </nav>
