add movment sides

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
                         src="img/icons/arrows-up.png" /></button>
                     <button class="text-move-down btn" onclick="onMoveTextX(5)"> <img class="icon"
                         src="img/icons/arrows-down.png" /></button>
+                    <button class="text-move-left btn" onclick="onMoveTextY(-5)"> <img class="icon"
+                            src="img/icons/arrows-left.png" /></button>
+                    <button class="text-move-right btn" onclick="onMoveTextY(5)"> <img class="icon"
+                            src="img/icons/arrows-right.png" /></button>
                     <select class="font-type btn" onclick="onChangeFontFamily(this.value)">
                         <option value="Impact">Impact</option>
                         <option value="Arial">Arial</option>
